--- a/css/projects.css
+++ b/css/projects.css
@@ -19,13 +19,14 @@ a:hover{
     opacity:.6;
   }
   
+
 #project{
     position:relative;
     max-width: 100%;
     display: grid;
     padding-left:10px;
     padding-right:10px;
-    top: 120px;
+    top: 80px;
     /*grid-template-columns: 35fr 65fr;
     grid-template-columns: 29% 35.5% 28% 7.5%;*/
     grid-template-columns: 29fr 71fr;
@@ -41,6 +42,7 @@ a:hover{
     justify-content:space-between;
     width:100%;
     position:relative;
+    opacity:.6;
 }
 /*#description a{
     text-decoration:underline;
@@ -67,7 +69,7 @@ a:hover{
     display:flex;
     flex-direction:row;
     justify-content:space-between;
-    border-top:1px black solid;
+    border-top:.5px black dotted;
     padding-top:0px;
     padding-bottom:0px;
 }
@@ -354,8 +356,8 @@ input:focus::-webkit-slider-runnable-track {
             position:relative;
         }
         .bottom{
-            position:absolute;
-            margin-bottom:-43px;
+            position:fixed;
+            margin-bottom:28px;
         }
         .modal-overlay img{
             max-width:96%;
