--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ a:hover{
   padding-right:10px;
   padding-bottom:10px;
   margin-bottom:28px;
-  background-color:#f2f2f2;
+  /*background-color:#f2f2f2;*/
   display:flex;
   flex-direction:row;
   justify-content:space-between;
