--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a{
  display: grid;
  /*grid-template-columns: 29% 35.5% 35.5%;*/
  grid-template-columns: 29% 35.5% 28% 7.5%;
- grid-template-rows: auto;
+ grid-template-rows: auto auto;
  border-bottom:.5px black dotted;
 }
 
@@ -149,7 +149,7 @@ a{
   grid-row:1;
   grid-column:2;
   padding-right:30px;
-  padding-bottom:14px;
+  padding-bottom:10px;
 }
 #about img{
   /*display:none;*/
@@ -165,7 +165,7 @@ a{
   margin-top:2px;
   justify-self:flex-start;
   align-self:flex-start;
-  padding-bottom:14px;
+  padding-bottom:10px;
 }
 #about .contact{
   display:inline-block;
@@ -173,11 +173,11 @@ a{
   text-align:left;
   padding-right:24px;
   padding-left:10px;
-  grid-column:3;
+  grid-column:3/span 4;
   grid-row:1;
-  padding-bottom:14px;
+  padding-bottom:10px;
 }
-#about .mobilecontact{
+/*#about .mobilecontact{
   display:none;
   padding-left:4px;
   grid-row:3;
@@ -188,13 +188,23 @@ a{
   padding-bottom:14px;
   transition:.2s; 
   justify-content:flex-start;
-}
+}*/
 a, .more{
   transition: opacity.2s linear;
 }
 a:hover{
   /*background-color: yellow;*/
   opacity:.6;
+}
+.clients{
+  grid-row:1;
+  grid-column:3/span 4;
+  width:100%;
+  padding-bottom:12px;
+  font-size:12px;
+}
+.clients p:nth-of-type(2){
+  columns:2;
 }
 
 
@@ -251,9 +261,14 @@ a:hover{
 
 .images img{
   width:50%;
+  /*width:100%;*/
   height:auto;
   padding-right:10px;
 }
+/*.images img:nth-of-type(2){
+  display:none;
+
+}*/
 .images{
   max-width:100%;
   grid-column:1/span 3;
@@ -283,7 +298,6 @@ a:hover{
 .extender a, .more a, .contact a, .p a{
   transition: background-color, box-shadow;
   transition-duration:.3s;
-  /*border-radius:8px;*/
 }
 .more{
   margin-top:20px;
@@ -372,6 +386,7 @@ body{
   /*.thumbnails img:nth-of-type(3){
     display:none;
   }*/
+/*
   .thumbnails img{
     display:none;
   }
@@ -383,7 +398,7 @@ body{
 .listing{
   padding-top:12px;
   padding-bottom:6px;
-}
+}*/
 .extender{
   grid-column:1/span 4;
   grid-row: 2;
