--- a/css/projects.css
+++ b/css/projects.css
@@ -32,6 +32,7 @@ a:hover{
     /*grid-template-columns: 35fr 65fr;
     grid-template-columns: 29% 35.5% 28% 7.5%;*/
     grid-template-columns: 29fr 71fr;
+    grid-template-rows:auto;
     justify-content:space-between;
     align-items:start;
 }
@@ -46,6 +47,7 @@ a:hover{
     position:relative;
     opacity:.6;
 }
+
 /*#description a{
     text-decoration:underline;
 }*/
@@ -54,6 +56,7 @@ a:hover{
     max-width:100%;
     cursor:zoom-in;
     padding-right:0;
+    padding-bottom:8px;
 }
 #description{
     grid-row:1;
@@ -71,13 +74,13 @@ a:hover{
     display:flex;
     flex-direction:row;
     justify-content:space-between;
-    border-top:.5px black dotted;
+  /*  border-top:.5px black dotted;*/
     padding-top:0px;
     padding-bottom:0px;
 }
 .detail p{
     width:48%;
-    margin-top:10px;
+    margin-top:6px;
 }
 
 .detail a{
@@ -115,7 +118,7 @@ grid-row:3;
 .diptych{
     display:inline-grid;
     grid-template-columns:auto auto;
-    grid-column-gap: 6px;
+    grid-column-gap: 8px;
     max-width:100%;
     justify-content:space-between;
     overflow-x:hidden;
@@ -123,17 +126,17 @@ grid-row:3;
 .diptych img{
     position:relative;
     padding-right:6px;
-    grid-column-gap:6px;
+    grid-column-gap:8px;
     align-self:flex-start;
 }
 .triptych{
     display:inline-grid;
     grid-template-columns: auto auto auto;
-    grid-column-gap:6px;
+    grid-column-gap:8px;
     max-width:100%;
     justify-content:space-between;
     overflow-x:hidden;
-    margin-bottom:6px;
+    margin-bottom:8px;
 }
 .triptych img{
     position:relative;
@@ -144,12 +147,12 @@ grid-row:3;
 .polyptych{
     display:inline-grid;
     grid-template-columns: auto auto auto auto;
-    grid-column-gap:6px;
-    grid-row-gap:6px;
+    grid-column-gap:8px;
+    grid-row-gap:8px;
     max-width:100%;
     justify-content:space-between;
     overflow-x:hidden;
-    margin-bottom:6px;
+    margin-bottom:8px;
 }
 .polyptych img{
     position:relative;
@@ -180,7 +183,7 @@ grid-row:3;
     transform:translate(-50%, -50%);
 }
 
-/*------------------for diptychs with captions----------*/
+/*------------------for pictures with captions----------*/
 .captioned{
     grid-template-rows: auto auto;
 }
@@ -192,16 +195,14 @@ grid-row:3;
     grid-column:1/span 2;
 }
 
-
 .caption{
     max-width:50%;
-    font-size:15px;
+    font-size:12px;
     padding-right: 30px;
     font-family: 'Suisse Intl Italic';
-    opacity:.6;
     transition: opacity .3s;
 }
-.caption:hover, .caption a:hover, #label a:hover{
+.caption a:hover, #label a:hover{
     opacity:1;
 }
 .caption a{
@@ -210,8 +211,26 @@ grid-row:3;
 .citation{
     max-width:50%;
     font-size:12px;
-    opacity:.6;
 }
+
+
+/*------------------subheads, for dividing project pages into sections----------*/
+
+.subhead{
+    padding-top:72px;
+    padding-right:36px;
+   /* padding-top:6px;*/
+    padding-bottom:1.35%;
+    font-size: 1.3rem;
+    /*border-top:.65px dotted;*/
+}
+.subhead_2{
+    grid-column:1;
+    margin-bottom:1em;
+    opacity:.6;
+    grid-row:2;
+}
+
 /*-----------------------non-universal changes for specific projects----------------*/
 
 /*---------------------------------reconna-------------------------*/
@@ -371,9 +390,9 @@ input:focus::-webkit-slider-runnable-track {
         .modal-overlay img{
             max-width:96%;
         }
-        #project #label, #label a{
+       /* #project #label, #label a{
             display:none;
-        }
+        }*/
 }
 
     @media (max-width: 700px) {
