--- a/css/projects.css
+++ b/css/projects.css
@@ -242,7 +242,6 @@ grid-row:3;
     grid-column:2;
 }
 textarea {
-    background-color:#f2f2f2;
     color:#111111;
     overflow:hidden;
     font-family: "Reconna";
@@ -259,6 +258,7 @@ textarea {
 textarea:hover{
     transition: 0.2s;
     height:300px;
+    resize:none;
     overflow-y:scroll;
 }
 .reconnapage .sliderlabel{
