back to how it was

--- a/css/style.css
+++ b/css/style.css
@@ -235,24 +235,12 @@ a:hover{
 .info{
   transition:.3s;
   padding-right:10px;
+  grid-column: 1;
 }
-
-.thumbnails{
-  grid-column:3;
-  padding-right:4px;
-  /*display:flex;*/
-  display:none;
-  justify-content:flex-end;
-}
-.thumbnails img{
-  height:26px;
-  padding-right:6px;
-}
-
 .extender{
   max-width: 100%;
   display: grid;
-  grid-column:2/span 4;
+  grid-column:2/span 3;
   /*grid-column:1/span 4;*/
   grid-template-columns: 29% 71%;
   /*grid-template-rows: auto auto auto;*/
@@ -260,14 +248,14 @@ a:hover{
 }
 
 .images img{
-  width:100%;
+  width:50%;
   /*width:100%;*/
   height:auto;
-  /*padding-right:10px;*/
+  padding-right:10px;
 }
-.images img:nth-of-type(2){
+/*.images img:nth-of-type(2){
   display:none;
-}
+}*/
 .images{
   max-width:100%;
   grid-column:1/span 3;
@@ -276,7 +264,7 @@ a:hover{
   flex-direction:row;
   align-items:flex-start;
   justify-content:flex-start;
-  /*padding-right:10px;*/
+  padding-right:10px;
   transition: opacity .2s;
 }
 /*.projpage{
