--- a/css/projects.css
+++ b/css/projects.css
@@ -15,6 +15,10 @@ cursor:default;
 }
 .top{
     padding-left:10px;
+    padding-top:14px;
+    padding-bottom:24px;
+    display:grid;
+    grid-template-columns: 25fr 75fr;
 }
 a:hover{
     /*background-color: yellow;*/
@@ -28,10 +32,7 @@ a:hover{
     display: grid;
     padding-left:10px;
     padding-right:10px;
-    top: 80px;
-    /*grid-template-columns: 35fr 65fr;
-    grid-template-columns: 29% 35.5% 28% 7.5%;*/
-    grid-template-columns: 29fr 71fr;
+    grid-template-columns: 25fr 75fr;
     grid-template-rows:auto;
     justify-content:space-between;
     align-items:start;
