--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-
-@font-face{
-  font-family: "Neue Montreal Medium";
-  src:url('fonts/NeueMontreal-Medium.otf');
-}
-
-@font-face{
-  font-family: "Neue Montreal";
-  src:url('fonts/NeueMontreal-Regular.otf');
-}
 @font-face{
   font-family: "Suisse Intl";
   src:url('fonts/SuisseIntl-Regular.otf');
@@ -37,6 +27,8 @@ body {
 	color: black;
   overflow-x: hidden;
   margin:0;
+  padding-top:14px;
+  padding:10px;
 }
 a, .title, .description{
   transition:.2s;
@@ -54,7 +46,7 @@ transition: background-color 0.5s linear;
 
 .top p, .top a, .bottom a, .about p, #projfooter, #projfooter a, .mobilecontact{
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-family:'Suisse Intl';
   cursor: pointer;
 }
@@ -63,8 +55,6 @@ transition: background-color 0.5s linear;
   display: flex;
   flex-direction: column;
   padding:0;
-  margin-bottom:10px;
-	bottom: 0;
   left: 10px;
   position: fixed;
 }
@@ -106,10 +96,6 @@ padding-left: 10px;
 font-size:1.1rem;
 }
 
-.name{
-  margin-top:-2px;
-}
-
 #about p{
   padding:0;
   margin:0;
@@ -131,18 +117,7 @@ font-size:1.1rem;
   grid-column-start:2;
   grid-row:2;
 }
-/*#about .mobilecontact{
-  display:none;
-  padding-left:4px;
-  grid-row:3;
-  grid-column:1;
-  line-height:1;
-  flex-direction:row;
-  flex-wrap:wrap;
-  padding-bottom:14px;
-  transition:.2s; 
-  justify-content:flex-start;
-}*/
+
 a, .more{
   transition: opacity.2s linear;
 }
@@ -174,17 +149,12 @@ a:hover{
 /*---------------------------------------------index-------------------------------*/
 #fullindex{
   position:relative;
-  margin:0;
-  padding:0;
-  padding-left:0px;
   width:100%;
 }
 .listing{
+  padding-top:10px;
   max-width: 100%;
   display: grid;
-  padding-left:10px;
-  padding-top:10px;
-  padding-bottom:10px;
   grid-template-columns: 25% 37.5% 37.5%;
   border-bottom:.5px dotted black;
   cursor:pointer;
@@ -196,44 +166,36 @@ a:hover{
   padding-right:10px;
   grid-column: 1;
 }
-.extender{
+/*.extender{
   max-width: 100%;
   display: grid;
   grid-column:2/span 3;
   grid-template-columns: 29% 71%;
   padding-right:10px;
-}
-
-.images img{
-  width:50%;
-  /*width:100%;*/
-  height:auto;
-  padding-right:10px;
-}
-/*.images img:nth-of-type(2){
-  display:none;
 }*/
+
 .images{
   max-width:100%;
-  grid-column:1/span 3;
-  /*grid-row: 1/span 3;*/
+  grid-column: 2/span 3;
   display:flex;
   flex-direction:row;
   align-items:flex-start;
   justify-content:flex-start;
-  padding-right:10px;
   transition: opacity .2s;
+  margin-right:10px;
 }
-.extender a, .more a, .contact a, .p a{
+.images img{
+  width:50%;
+  height:auto;
+  padding-right:10px;
+}
+/*.more a, .contact a, .p a{
   transition: background-color, box-shadow;
   transition-duration:.3s;
-}
+}*/
+
 .more{
-  margin-top:10px;
-  padding-left:10px;
-  padding-right:10px;
-  padding-bottom:10px;
-  /*background-color:#f2f2f2;*/
+  padding-top:10px;
   display:flex;
   flex-direction:row;
   justify-content:space-between;
@@ -270,48 +232,35 @@ a:hover{
   display:none;
 }
 
-.listing{
-  padding-top:10px;
-}
-
 .info{
   grid-column:1/span 2;
 }
-.extender{
-  grid-column:1/span 4;
-  grid-row: 2;
-  padding-right:10px;
-  padding-top:10px;
-}
-.images img{
-  width:100%;
-}
+
 .images img:nth-of-type(2){
   display:none;
 }
 .images{
-  grid-column:1/span 4;
-  padding-right:0px;
+  padding-top:10px;
+  margin-right:0;
+  grid-column:1/span 3;
 }
+
+.images img{
+  width:100%;
+}
+
 .more span:nth-of-type(2){
   display:none;
 }
-.more{
-  bottom:10px;
-}
 
 }
-
-
-
-
 
 
 
 .querytown{
   z-index:1000;
   width:300px;
-  font-size:2em;
+  font-size:1.1rem;
   color:white;
   margin-top:10vh;
   margin-left:50px;
