--- a/css/projects.css
+++ b/css/projects.css
@@ -12,14 +12,21 @@ cursor:default;
     justify-self:flex-start;
 }
 .top{
-    padding-top:14px;
     padding-bottom:24px;
     display:grid;
     grid-template-columns: 25fr 75fr;
 }
 .bottom{
+    display: flex;
+    flex-direction: column;
+    padding:0;
+    left: 10px;
     bottom:10px;
-}
+    position: fixed;
+  }
+  .bottom a{
+    margin:0px;
+  }
 a:hover{
     opacity:.6;
   }
