--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ a:hover{
  max-width: 100%;
  display: grid;
  grid-template-columns: 25% 37.5% 37.5%;
- border-bottom:.5px black dotted;
+ border-bottom:.6px solid rgba(0,0,0,.6);
  padding-bottom:10px;
 }
 .name, #about .p{
@@ -96,7 +96,7 @@ font-size:1.1rem;
   grid-column-start: 2;
   grid-column-end: 4;
   padding-bottom:14px;
-  padding-right: 24px;
+  padding-right: 14px;
   max-width: 900px;
 }
 #about .contact{
@@ -143,10 +143,11 @@ a:hover{
 }
 .listing{
   padding-top:10px;
+  padding-bottom:10px;
   max-width: 100%;
   display: grid;
   grid-template-columns: 25% 37.5% 37.5%;
-  border-bottom:.5px dotted black;
+  border-bottom:.6px solid rgba(0,0,0,.6);
   cursor:pointer;
   transition: .3s;
 }
@@ -156,13 +157,6 @@ a:hover{
   padding-right:10px;
   grid-column: 1;
 }
-/*.extender{
-  max-width: 100%;
-  display: grid;
-  grid-column:2/span 3;
-  grid-template-columns: 29% 71%;
-  padding-right:10px;
-}*/
 
 .images{
   max-width:100%;
@@ -179,10 +173,6 @@ a:hover{
   height:auto;
   padding-right:10px;
 }
-/*.more a, .contact a, .p a{
-  transition: background-color, box-shadow;
-  transition-duration:.3s;
-}*/
 
 .more{
   padding-top:10px;
