--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
   padding-top:10px;
   padding:10px;
 }
+
 a, .title, .description{
   transition:.2s;
 }
@@ -44,8 +45,7 @@ transition-duration: 0.5s, .5s;
 transition: background-color 0.5s linear;
 }
 
-.top p, .top a, .bottom a, .about p, #projfooter, #projfooter a, .mobilecontact{
-  color: black;
+.name, #about .p, .top, .bottom, .about p, #projfooter{
   font-size: 1.1rem;
   font-family:'Suisse Intl';
   cursor: pointer;
@@ -62,6 +62,7 @@ a:hover{
 .flip{
   text-align:left;
   justify-content:flex-start;
+  cursor: pointer;
 }
 .about{
   justify-self:flex-start;
@@ -81,9 +82,6 @@ a:hover{
  grid-template-columns: 25% 37.5% 37.5%;
  border-bottom:.6px solid rgba(0,0,0,.6);
  padding-bottom:10px;
-}
-.name, #about .p{
-font-size:1.1rem;
 }
 
 #about p{
@@ -209,16 +207,17 @@ a:hover{
 .clients{
   display:none;
 }
-
+/*-----------put labels below their pictures on mobile-------*/
 .info{
   grid-column:1/span 2;
+  grid-row:2;
+  padding-top:10px;
 }
 
 .images img:nth-of-type(2){
   display:none;
 }
 .images{
-  padding-top:10px;
   margin-right:0;
   grid-column:1/span 3;
 }
