--- a/css/projects.css
+++ b/css/projects.css
@@ -11,9 +11,9 @@
     justify-self:flex-start;
 }
 .top{
-    padding-bottom:24px;
     display:grid;
     grid-template-columns: 25fr 75fr;
+    padding-bottom:30px;
 }
 .bottom{
     display: flex;
@@ -44,12 +44,11 @@
 #description{
     grid-row:1;
     padding-right:36px;
-    /*transition:.2s;*/
 }
 #description p:first-of-type{ /*this removes the top margin automatically added to paragraphs*/
     margin-top:0px;
 }
-.detail{
+/*.detail{
     display:flex;
     flex-direction:row;
     justify-content:space-between;
@@ -62,10 +61,10 @@
 .detail a{
     padding:0;
     margin:0;
-}
+}*/
 #gallery{
-grid-column:2;
-grid-row:1;
+    grid-column:2;
+    grid-row:1;
 }
 
 #projfooter{
@@ -138,18 +137,12 @@ grid-row:1;
 }
 
 /*------------------subheads, for dividing project pages into sections----------*/
-
+    /*if you'd like to add a description beneath a subhead, use a .caption.*/
 .subhead{
-    padding-top:2rem;
-    padding-right:36px;
-    padding-bottom:1.35%;
+    padding-top:20px;
+    padding-right:30px;
+    padding-bottom:10px;
     font-size: 1.1rem;
-}
-.subhead_2{
-    grid-column:1;
-    margin-bottom:1em;
-    opacity:.5;
-    grid-row:2;
 }
 
 /*-----------------------non-universal changes for specific projects----------------*/
@@ -256,19 +249,20 @@ input:focus::-webkit-slider-runnable-track {
             flex-direction:column;
         }
         
-        .detail{
+        /*.detail{
             margin-bottom:20px;
         }
         .detail p{
             width: 45%;
-        }
+        }*/
         #description{
-            padding-top:10px;
+            padding-top:5px;
             padding-right: 24px;
+            padding-bottom:8px;
         }
         #projfooter{
             font-size:1.1rem;
-            padding-top:80px;
+            padding-top:50px;
             align-self:flex-end;
             width:65%;
             position:relative;
@@ -286,9 +280,9 @@ input:focus::-webkit-slider-runnable-track {
 @media (max-width: 750px) {
 
     @media (max-width: 700px) {
-        #projfooter a{
+       /* #projfooter a{
             font-size:1.1rem;
-        }
+        }*/
         .polyptych{
             grid-template-columns: auto auto;
             max-width:100%;
